# llm_rag_constitucion_chile

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.MD  app.py  ingest.py  ingest_history.py  pyproject.toml  requirements.txt  scripts_usage_report.py
app/: main.py
app/prompts/: system_prompt.md
app/styles/: main.css
app/templates/: hero.html
app/utils/: __init__.py  resources.py
data/: constitucion.md
docs/: AGENT.md
scripts/: ingest.py  ingest_history.py  report_usage.py
src/: config.py  database.py  embeddings.py  history_extractor.py  openai_usage.py  parser.py
src/cl_legal_rag/: __init__.py  config.py  database.py  embeddings.py  history_extractor.py  openai_usage.py
