[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cl-legal-rag"
version = "1.0.0"
description = "Asistente RAG para consultas sobre la Constitucion de Chile."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.3",
    "langchain>=0.2.7",
    "langchain-chroma>=0.1.2",
    "langchain-openai>=0.1.13",
    "openai>=1.35.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.36.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cl_legal_rag"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
